<resources>
    <string name="app_name">Personal Restaurant Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_manage">Manage</string>
    <string name="menu_show">Show</string>
    <string name="menu_search">Search</string>
    <string name="menu_detail">Detail</string>
    <string name="menu_about">About</string>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Mobile or Password</string>

    <string name="text_hello">Hello,</string>
    <string name="text_title">Personal Restaurant Guide</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_host">HostActivity</string>

    <string name="text_res_name">Restaurant Name</string>
    <string name="text_res_address">Address</string>
    <string name="text_res_description">Description</string>
    <string name="text_res_city">City</string>
    <string name="text_res_state">State/Province</string>
    <string name="text_res_zip">Zip/Postal Code</string>
    <string name="text_res_country">Country</string>
    <string name="text_res_phone">Phone</string>
    <string name="text_res_tag">Tag</string>
    <string name="btn_res_done">Done</string>
    <string name="btn_res_update">Update</string>
    <string name="btn_res_delete">Delete</string>
    <string name="btn_res_Rate">Rate this</string>
    <string name="btn_res_Location">Show in map</string>
    <string name="btn_share">Share</string>
    <string name="btn_view">View</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>

