<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:gravity="center">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantName"
        android:textSize="30sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantTag"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantDescription"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantAddress"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantCity"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantState"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantZip"
        android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantCountry"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtRestaurantPhone"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextHint"
            android:text="@string/btn_res_Rate"/>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/restaurantRating"
        android:layout_marginLeft="20dp"
        android:layout_weight="1">
    </RatingBar>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextHint"
            android:text="@string/btn_res_update"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextHint"
            android:text="@string/btn_res_delete"
            android:layout_marginLeft="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTextHint"
            android:text="@string/btn_res_Location"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>